# ml-workbook

./: .gitignore  .pre-commit-config.yaml  Makefile  PROMPT.md  README.md  package-lock.json  package.json  secure.yaml
apex-submission-phase-4/: README.md  apex_project_phase4_submission.html  apex_project_phase4_submission.ipynb  house_price_validation_results.csv
bits/: prompts.md
bits-trimester1-apex-project/: DEEPDIVE.md  EXPLANATION.md  README.md  SLIDES.md  VIVA.md  apex_project_common.ipynb  apex_project_common_v2.ipynb  model_gb_pca.pkl  model_lgb_pca.pkl  model_lr_pca.pkl  model_svr_pca.pkl  plan.md  protected_apex_project_phase4_deliverable.ipynb  requirements.txt
data_stores_and_pipelines/: .dockerignore  ASSIGNMENT.md  DOCKER_SETUP.md  PLAN.md
data_visualization/: ASSIGNMENT.md  PLAN.md  config.py  dashboard.ipynb  requirements.txt  run.py  variable_types.md
gen_ai/agents/: DESIGN.md  README.md  USAGE.md  agents.js  comprehensive-demo.js  demo.js  env.example  package-lock.json  package.json  pyproject.toml  test-agents.js
gen_ai/agents/src/itinerary_planner/: __init__.py  flight_search.py  graph.py  main.py  prompt_garden.py  state.py  tools.py
gen_ai/agents/src/itinerary_planner/nodes/: __init__.py  add_prices.py  build_itinerary.py  chat_response.py  flight_search_legs.py  plan_accommodation.py  plan_days.py  plan_transport.py  research.py
gen_ai/mcp_server/: .env.example  README.md  demo-client.js  package-lock.json  package.json  pyproject.toml  server.js  server.py
gen_ai/mcp_server/tools/: flights.py  llm_tools.py
heuristic/: main.py  (+1 more)
(+3152 files in other folders)
